horizontal scroll issue fix

--- a/assets/css/style_v5.css
+++ b/assets/css/style_v5.css
@@ -19,6 +19,7 @@ body {
     font-weight: 300;
     width:100%;
     font-family: 'Roboto';
+    overflow-x: hidden;
 }
 
 .preloader {
@@ -1164,6 +1165,7 @@ button.btn-md:hover {
 .single_pricing:hover{
     box-shadow: 1px 1px 10px 1px #ccc;
 }
+
 .pricing_business .pricing_head{
     background:#999999;
 }
